--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,7 +3,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   padding-left: 135px;
-  padding-top: 158px;
+  // padding-top: 158px;
 
   h1 {
     margin-top: 104px;
@@ -142,6 +142,7 @@
 }
 @media screen and (max-width: 992px) {
   .hero__container {
+    padding-top: 100px;
     h1 {
       max-width: 500px;
       font-size: 25px;
@@ -156,10 +157,60 @@
     }
 
     .header__btn {
-      width: 100px;
+      width: 310px;
+      height: 48px;
+      border-radius: 4px;
+    }
+    .hero-bottom {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      span {
+        font-family: "Poppins";
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 27px;
+        color: rgba(19, 171, 78, 1);
+        position: absolute;
+        left: 250px;
+      }
+    }
+
+    .hero-photo {
+      margin-left: 20px;
+    }
+    .trust {
+      margin-left: 218px;
+    }
+    .company {
+      max-width: 850px;
+      display: flex;
+      gap: 20px;
+      margin-top: 32px;
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero__container {
+    h1 {
+      margin-top: 0px;
+      max-width: 508px;
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 36px;
+    }
+    p {
+      margin-top: 10px;
+      max-width: 425px;
       font-size: 12px;
-      font-weight: 500;
-      line-height: 20px;
+      font-weight: 400;
+      line-height: 24px;
+    }
+
+    .header__btn {
+      width: 310px;
+      height: 48px;
+      padding: 12px 96px;
     }
     .hero-bottom {
       gap: 10px;
@@ -173,18 +224,79 @@
         left: 150px;
       }
     }
-
+    .herro {
+      margin-right: 150px;
+      display: flex;
+      flex-direction: column;
+    }
     .hero-photo {
-      margin-left: 79px;
+      margin-left: -79px;
     }
     .trust {
-      margin-left: 218px;
+      margin-left: 65px;
     }
     .company {
       max-width: 850px;
       display: flex;
+      flex-direction: column;
       gap: 20px;
       margin-top: 32px;
+    }
+  }
+}
+@media screen and (max-width: 576px) {
+  .hero__container {
+    h1 {
+      margin-top: 0px;
+      max-width: 908px;
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 36px;
+    }
+    p {
+      margin-top: 10px;
+      width: 525px;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 24px;
+    }
+
+    .header__btn {
+      width: 310px;
+      height: 48px;
+      padding: 12px 96px;
+    }
+    .hero-bottom {
+      gap: 10px;
+      span {
+        font-family: "Poppins";
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 20px;
+        color: rgba(19, 171, 78, 1);
+        position: absolute;
+        left: 100px;
+      }
+    }
+    .herro {
+      margin-right: 150px;
+      display: flex;
+      flex-direction: column;
+    }
+    .hero-photo {
+      margin-top: 50px;
+      margin-left: -79px;
+    }
+    .trust {
+      margin-left: 0px;
+    }
+    .company {
+      max-width: 850px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 32px;
+      margin-left: -100px;
     }
   }
 }
