--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,10 +47,10 @@
     margin: 0 auto;
   }
 }
-@media screen and (max-width: 540px) {
-  .container {
-    max-width: 320px;
-    width: 100%;
-    margin: 0 auto;
-  }
-}
+// @media screen and (max-width: 540px) {
+//   .container {
+//     max-width: 320px;
+//     width: 100%;
+//     margin: 0 auto;
+//   }
+// }
