--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -255,7 +255,7 @@
     }
     p {
       margin-top: 10px;
-      width: 525px;
+      max-width: 525px;
       font-size: 12px;
       font-weight: 400;
       line-height: 24px;
@@ -295,7 +295,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
-      margin-top: 32px;
+      margin-top: 35px;
       margin-left: -100px;
     }
   }
