--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -268,6 +268,7 @@
     }
     .hero-bottom {
       gap: 10px;
+      z-index: -1;
       span {
         font-family: "Poppins";
         font-size: 15px;
